<resources>
    <string name="app_name">ShopApi</string>
    <string name="email_adress">Email address</string>
    <string name="sasa">sasa</string>
    <string name="password">password</string>
    <string name="remember_me">Remember me</string>
    <string name="sign_in">Sign In</string>
    <string name="forgor_pasword">Forgor pasword?</string>
    <string name="continu">Continue</string>
    <string name="error">Something went wrong</string>
    <string name="missing_fields">Fill all fields</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="full_name">Full Name</string>
    <string name="already_a_member_log_in">Already a member? Log in</string>
    <string name="sign_up">sign Up</string>
    <string name="register">register</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign out</string>


</resources>