<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.shopapi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favorites"
        android:name="com.example.shopapi.ui.favorites.FavoritesFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/favorites_fragment" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.shopapi.ui.orders.OrdersFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/orders_fragment" />

    <fragment
        android:id="@+id/navigation_wallet"
        android:name="com.example.shopapi.ui."
        android:label="@string/title_notifications"
        tools:layout="@layout/orders_fragment" />
</navigation>